--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -21,7 +21,7 @@
           </div>
           <div class="col-md-4">
             {% if page.image %}
-              <img style="max-height: 10em;" src="{{ page.image }}" />
+              <img style="padding-top: 10px; max-height: 11em;" src="{{ page.image }}" />
             {% endif %}
           </div>
         </div>
