--- a/_layouts/article_nuvlabox_overview.html
+++ b/_layouts/article_nuvlabox_overview.html
@@ -11,13 +11,17 @@
             {% include nuvlabox_pitch.html %}
         </div>
 
+        <p align="center">
+          <img style="max-width: 700px" src="/img/content/nuvlabox/photos/nb_front.png" alt="NuvlaBox standalone" />
+        </p>
+
         <div class="container big spacy">
           <h1>What do you get?</h1>
             <div class="row row-highlights">
               <div class="col-md-6 col-2-image">
                   <h1>
                       <center>
-                          <span class="glyphicon glyphicon-scale"></span>
+                          <span class="glyphicon glyphicon-lock"></span>
                       </center>
                   </h1>
               </div>
@@ -40,7 +44,7 @@ For most smaller organisations, the cost of a private cloud infrastructure is pr
               <div class="col-md-6 col-2-image">
                   <h1>
                       <center>
-                          <span class="glyphicon glyphicon-scale"></span>
+                          <span class="glyphicon glyphicon-leaf"></span>
                       </center>
                   </h1>
               </div>
@@ -49,7 +53,7 @@ For most smaller organisations, the cost of a private cloud infrastructure is pr
               <div class="col-md-6 col-2-image">
                   <h1>
                       <center>
-                          <span class="glyphicon glyphicon-scale"></span>
+                          <span class="glyphicon glyphicon-signal"></span>
                       </center>
                   </h1>
               </div>
@@ -74,7 +78,7 @@ For most smaller organisations, the cost of a private cloud infrastructure is pr
               <div class="col-md-6 col-2-image">
                   <h1>
                       <center>
-                          <span class="glyphicon glyphicon-scale"></span>
+                          <span class="glyphicon glyphicon-piggy-bank"></span>
                       </center>
                   </h1>
               </div>
@@ -83,7 +87,7 @@ For most smaller organisations, the cost of a private cloud infrastructure is pr
               <div class="col-md-6 col-2-image">
                   <h1>
                       <center>
-                          <span class="glyphicon glyphicon-scale"></span>
+                          <span class="glyphicon glyphicon-fullscreen"></span>
                       </center>
                   </h1>
               </div>
@@ -109,7 +113,7 @@ For most smaller organisations, the cost of a private cloud infrastructure is pr
             <div class="col-md-6 col-2-image">
                 <h1>
                     <center>
-                        <span class="glyphicon glyphicon-scale"></span>
+                        <span class="glyphicon glyphicon-tent"></span>
                     </center>
                 </h1>
             </div>
@@ -133,7 +137,7 @@ For most smaller organisations, the cost of a private cloud infrastructure is pr
             <div class="col-md-6 col-2-image">
                 <h1>
                     <center>
-                        <span class="glyphicon glyphicon-scale"></span>
+                        <span class="glyphicon glyphicon-home"></span>
                     </center>
                 </h1>
             </div>
@@ -142,7 +146,7 @@ For most smaller organisations, the cost of a private cloud infrastructure is pr
             <div class="col-md-6 col-2-image">
                 <h1>
                     <center>
-                        <span class="glyphicon glyphicon-scale"></span>
+                        <span class="glyphicon glyphicon-globe"></span>
                     </center>
                 </h1>
             </div>
