--- a/_layouts/article_slipstream_overview.html
+++ b/_layouts/article_slipstream_overview.html
@@ -85,14 +85,14 @@
               <div class="col-md-6 col-2-text">
                   <h2>CIOs struggling to control cloud usage</h2>
                   <p>If your developers are using their own credentials to access cloud services because provisioning applications within  your organisation is too long-winded and time-consuming, then SlipStream is for you.</p>
-                  <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a></center>
+                  <center><a class="btn btn-primary btn-lg" role="button" href="/contact/#contact-us-form">Get in touch &raquo;</a></center>
               </div>
           </div>
           <div id="sme" class="row row-highlights">
               <div class="col-md-6 col-2-text">
                   <h2>Cloud Newbies</h2>
                   <p>If you are considering cloud but don't want to make that big, and possibly expensive, decision of signing up with one cloud provider, SlipStream can give you access to most of the mainstream IaaS providers without being stuck with vendor lock-in.</p>
-                  <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a></center>
+                  <center><a class="btn btn-primary btn-lg" role="button" href="/contact/#contact-us-form">Get in touch &raquo;</a></center>
               </div>
               <div class="col-md-6 col-2-image">
                 <h1>
