--- a/_includes/slipstream_intro.html
+++ b/_includes/slipstream_intro.html
@@ -3,14 +3,21 @@
     <a href="/jobs/index.html">We're hiring!</a>
   </div>-->
 </div>
-<div class="jumbotron top_product slipstream">
+
+<div style="margin-top: 3px;" class="jumbotron top_product slipstream">
   <div class="container">
     <h1><img src="/img/design/slipstream_logo_white_on_transparent_256px.png"></img>
 	  {% if page.subtitle %}
 	    {{ page.subtitle }}
+	  {% else %}
+	    Application Deployment Platform
     {% endif %}
-	</h1>
-    <p>{{ page.summary }}</p>
+  	</h1>
+    {% if page.subtitle %}
+      <p>{{ page.summary }}</p>
+    {% else %}
+      <p>Affordable, multi-cloud application management platform, built on open source professional software, for the enterprise, with love.</p>
+    {% endif %}
 <!--		<p>Sign Up for SlipStream Training Event!</p><a href="http://www.eventbrite.com/e/slipstream-training-hands-on-use-of-a-cloud-management-platform-tickets-16393996886?ref=ebtnebtckt" target="_blank"><img src="https://www.eventbrite.com/custombutton?eid=16393996886" alt="Eventbrite - SlipStream Training: hands on use of a cloud management platform" /></a> -->
   </div>
 </div>
