--- a/_includes/top.html
+++ b/_includes/top.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" href="/">
-        <img src="/img/design/logo_clean.png" style="width: 64px;">
+        <img src="/img/design/logo_clean.png">
       </a>
       <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#main-navbar">
         <span class="sr-only">Toggle navigation</span>
@@ -29,7 +29,7 @@
           </ul>
           <span></span>
         </li>
-        <li id="nav-usecases" class="dropdown">
+        <!--<li id="nav-usecases" class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Use Cases <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="/products/slipstream/usecases#Enterprise-App-Store-/-Self-Service-IT">Deploy your own <b>Enterprise App Store / Self-Service IT</b></a></li>
@@ -39,32 +39,22 @@
             <li><a href="/products/nuvlabox/usecases#Field-Operations-with-Agile-Local-Infrastructure"><b>Turn-key field operation</b> infrastructure</a></li>
           </ul>
           <span></span>
-        </li>
+        </li>-->
         <li id="nav-benefits" class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Benefits <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="http://media.sixsq.com/how-can-managed-service-providers-benefit-from-automation"><b>MSP</b>: Increase margins with application deployment automation</a></li>
-            <li><a href="http://media.sixsq.com/how-can-vars-benefit-from-application-deployment-automation"><b>VAR</b>: Coordinates the configuration of individual services</a></li>
-            <li><a href="http://media.sixsq.com/how-can-iaas-providers-benefit-from-application-deployment-automation"><b>IaaS provider</b>: Increase service value and margins</a></li>
-            <li><a href="http://media.sixsq.com/how-helix-nebula-marketplace-delivers-cloud-to-big-science"><b>Big science organisation</b>: access to large scale federated cloud</a></li>
-            <li><a href="http://media.sixsq.com/how-to-bridge-the-digital-divide"><b>IT provider in emerging economies</b>: connectivity &amp; affordability in rural communities</a></li>
+            <li><a href="http://media.sixsq.com/how-can-managed-service-providers-benefit-from-automation">Managed Service Provider (MSP)</a></li>
+            <li><a href="http://media.sixsq.com/how-can-vars-benefit-from-application-deployment-automation">Value Added Reseller (VAR)</a></li>
+            <li><a href="http://media.sixsq.com/how-can-iaas-providers-benefit-from-application-deployment-automation">IaaS provider</a></li>
+            <li><a href="http://media.sixsq.com/how-helix-nebula-marketplace-delivers-cloud-to-big-science">Big science organisation</a></li>
+            <li><a href="http://media.sixsq.com/how-to-bridge-the-digital-divide">IT provider in emerging economies</a></li>
           </ul>
           <span></span>
         </li>
-        <li id="nav-personae" class="dropdown hidden-sm">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Our Users <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="/personae/overview"><b>Meet our users</b></a></li>
-            <li><a href="/personae/overview#Alice"><b>App Store user</b>: Alice</a></li>
-            <li><a href="/personae/overview#Bob"><b>CIO, Team Leader and/or account manager</b>: Bob</a></li>
-            <li><a href="/personae/overview#Clara"><b>DevOps engineer</b>: Clara</a></li>
-            <li><a href="/personae/overview#Dave"><b>SlipStream administrator</b>: Dave</a></li>
-          </ul>
-          <span></span>
-        </li>
+        <li id="nav-personae"><a href="/personae">Personae<span></span></a></li>
         <li><a href="http://media.sixsq.com/blog">Blog</a><span></span></li>
         <li><a href="http://support.sixsq.com">FAQ</a><span></span></li>
-        <li class="hidden-sm"><a href="/r-and-d">R&amp;D</a><span></span></li>
+        <li id="nav-r-and-d" class="hidden-sm"><a href="/r-and-d">R&amp;D</a><span></span></li>
         <li id="nav-about" class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
