--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -3,7 +3,7 @@
    {% include head.html %}
   <body>
    {% include top.html %}
-   {% if page.category == "r-and-d" %}
+   {% if page.class == "r-and-d" %}
      {% include r-and-d.html %}
    {% else %}
      {% include media_nav.html %}
@@ -14,35 +14,32 @@
       <h1>{{ page.title }}</h1>
       {{ page.content | markdownify }}
     </div>
-  </div>
-  {% for post in site.posts %}
-    {% if post.category == page.category %}
-    <div class="category-index {% cycle 'even', 'odd' %} spacy">
-      <div class="container big">
-        {% if post.image %}
-        <p/>
-        <center>
-        <a href="{{ post.url }}">
-          <img style="max-height: 10em;" src="{{ post.image }}" />
-        </a>
-        <p/>
-        </center>
+
+    <div class="container big">
+      {% for post in site.posts %}
+        {% if post.category == page.category %}
+
+          <div class="row row-highlights">
+
+          {% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
+          {% if thecycle == 'odd' %}
+
+            {% include left.html %}
+            {% include right.html %}
+
+          {% else %}
+
+            {% include right.html %}
+            {% include left.html %}
+
+          {% endif %}
+
+          </div>
         {% endif %}
-        <h2>
-          <a href="{{ post.url }}" class="title">{{ post.title }}</a>
-        </h2>
-        {% if post.category == 'news' %}
-          <div class="date">{{ post.date | date: "%d %B %Y" }}</div>
-        {% endif %}
-        <p>{{ post.content | strip_html | truncatewords: 25 }}</p>
-        {% if post.author %}
-          <p/>
-          <div class="author">By: {{ post.author }}</div>
-        {% endif %}
-      </div>
+      {% endfor %}
     </div>
-    {% endif %}
-  {% endfor %}
+
+  </div>
 
   {% include whats_next.html %}
 
