--- a/_layouts/personae_index.html
+++ b/_layouts/personae_index.html
@@ -7,24 +7,34 @@
   <div class="jumbotron">
     <div class="container">
       <h1>{{ page.title }}</h1>
-      <h2>Meet our SlipStream and NuvlaBox users</h2>
+      <h2>Meet our SlipStream and NuvlaBox personae.</h2>
     </div>
+    <div  class="container big">
+    {% for post in site.posts reversed %}
+      {% if post.category == page.category %}
+    
+        <div id="{{ post.title }}" class="row row-highlights">
+
+        {% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
+        {% if thecycle == 'odd' %}
+
+          {% include left.html %}
+          {% include right.html %}
+
+        {% else %}
+
+          {% include right.html %}
+          {% include left.html %}
+
+        {% endif %}
+  
+        </div>
+
+      {% endif %}
+    {% endfor %}
+    </div>
+
   </div>
-  {% for post in site.posts reversed %}
-    {% if post.category == page.category %}
-    <div id="{{ post.title }}" class="{% cycle 'even', 'odd' %} spacy">
-      <div class="container personae">
-        <p/>
-        <center>
-          <img src="{{ post.icon }}" />
-          <h2>{{ post.title }}</h2>
-          <h3>{{ post.overview }}</h3>
-        </center>
-        {{ post.content }}
-      </div>
-    </div>
-    {% endif %}
-  {% endfor %}
 
   {% include whats_next.html %}
 
