Small changes to text

--- a/_includes/overview_videos.html
+++ b/_includes/overview_videos.html
@@ -2,7 +2,7 @@
   <div id="tutorials" class="container spacy odd">
     <h1>Tutorials</h1>
     <div class="row"></div>
-    <p><a href="/videos" class="btn btn-primary btn-lg" role="button">View more Videos &raquo;</a></p>
+    <p><a href="/videos" class="btn btn-primary btn-lg" role="button">Check out our videos &raquo;</a></p>
   </div>
 
   <div id="col-template" style="display: none;">
