--- a/_layouts/article_slipstream_overview.html
+++ b/_layouts/article_slipstream_overview.html
@@ -59,7 +59,7 @@
             <div class="row row-highlights">
                 <div class="col-md-6 col-2-text">
                     <h2>An Extensible Framework</h2>
-                    <p>Take advantage of existing templates, such as load balancers, database clusters, Hadoop systems and more. But don't stay there, you can extend these and create your own. Take also advantage of configuration management systems, such as Puppet, Chef and Ansible. What about Docker? It's also batteries included, with support for Docker and Docker Swarms.</p>
+                    <p>Take advantage of existing templates, such as load balancers, database clusters, Hadoop systems and more. But don't stop there, you can extend these and create your own. You can also take advantage of configuration management systems, such as Puppet, Chef and Ansible. What about Docker? It's also batteries included, with support for Docker and Docker Swarms.</p>
                     <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/features">All clouds &raquo;</a></center>
                 </div>
                 <div class="col-md-6 col-2-image vertical-align">
@@ -197,7 +197,7 @@
                 <div class="col-md-6 col-2-text">
 			        <h2>Buy our <src href="/products/nuvlabox">NuvlaBox</src></h2>
 			        <p>SlipStream also comes packaged in its own portable appliance, giving you an affordable way to benefit from a private cloud supplied with top class software.</p>
-			        <p>This provides an affordable entry point to cloud computing. The NuvlaBox sets up in seconds and thanks to its robust fan-less design, will runs for a long time.</p>
+			        <p>This provides an affordable entry point to cloud computing. The NuvlaBox sets up in seconds and thanks to its robust fan-less design, will run for a long time.</p>
 			        <p>Remote management and update of apps is also supported using a SlipStream 'mothership'.</p>
               <center>
                 <a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox">Tell me more &raquo;</a>
