Improve html5 compliance

--- a/_includes/slipstream_intro.html
+++ b/_includes/slipstream_intro.html
@@ -6,7 +6,7 @@
 
 <div style="margin-top: 3px;" class="jumbotron top_product slipstream">
   <div class="container">
-    <h1><img src="/img/design/slipstream_logo_white_on_transparent_256px.png"></img>
+    <h1><img src="/img/design/slipstream_logo_white_on_transparent_256px.png" alt="slipstream logo" />
 	  {% if page.subtitle %}
 	    {{ page.subtitle }}
 	  {% else %}
