--- a/_includes/top.html
+++ b/_includes/top.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" href="/">
-        <img src="/img/design/logo_clean.png">
+        <img src="/img/design/logo_clean.png" alt="sixsq_logo" />
       </a>
       <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#main-navbar">
         <span class="sr-only">Toggle navigation</span>
@@ -16,8 +16,12 @@
         <li id="nav-products" class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Products <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="/products/slipstream"><b>SlipStream&reg;</b>: Multi-cloud management platform</a></li>
-            <li><a href="/products/nuvlabox"><b>NuvlaBox&reg;</b>: Cloud-in-a-box appliance</a></li>
+            <li role="menuitem">
+              <a href="/products/slipstream"><b>SlipStream&reg;</b>: Multi-cloud management platform</a>
+            </li>
+            <li>
+              <a href="/products/nuvlabox"><b>NuvlaBox&reg;</b>: Cloud-in-a-box appliance</a>
+            </li>
           </ul>
           <span></span>
         </li>
