--- a/_includes/whats_next.html
+++ b/_includes/whats_next.html
@@ -4,10 +4,8 @@
     <p>
 Interested and want to know more? We'd be pleased to provide you with further information. Get in touch.
     </p>
-    <a href="/contact/#contact-us-form">
-      <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#contact-modal">
+    <a href="/contact/#contact-us-form" class="btn btn-primary btn-lg">
         Contact us &raquo;
-      </button>
     </a>
   </div>
 </div>
