--- a/_layouts/article_slipstream_overview.html
+++ b/_layouts/article_slipstream_overview.html
@@ -121,7 +121,7 @@
           <div id="sme" class="row row-highlights">
               <div class="col-md-6 col-2-text">
                 <h2>Value Added Resellers</h2>
-                <p>The shift to cloud services, particularly to “Software as a Service offerings”, has  disrupted the Value-Added Reseller business model. In the cloud era, customers now expect access to their specialized applications without the hassle and cost of running the hardware. SlipStream helps VARs offer that service.</p>
+                <p>The shift to cloud services, particularly to “Software as a Service offerings”, has  disrupted the Value-Added Reseller business model. In the cloud era, customers now expect access to their specialised applications without the hassle and cost of running the hardware. SlipStream helps VARs offer that service.</p>
                 <center>
                   <a class="btn btn-primary btn-lg" role="button" href="http://media.sixsq.com/how-can-vars-benefit-from-application-deployment-automation">Learn more &raquo;</a>
                 </center>
@@ -144,7 +144,7 @@
               </div>
               <div class="col-md-6 col-2-text">
                 <h2>IaaS Providers</h2>
-                <p>The commoditization of cloud resources has squeezed IaaS service providers forcing them to differentiate their services from their competitors or to live with ever reducing margins. They face increasing competition from cloud service offerings at all levels. SlipStream meets these challenges, providing advanced automation features and significant benefits simplifying the transition from a IaaS provider to a Managed Service Provider..</p>
+                <p>The commoditisation of cloud resources has squeezed IaaS service providers forcing them to differentiate their services from their competitors or to live with ever reducing margins. They face increasing competition from cloud service offerings at all levels. SlipStream meets these challenges, providing advanced automation features and significant benefits simplifying the transition from a IaaS provider to a Managed Service Provider..</p>
                 <center>
                   <a class="btn btn-primary btn-lg" role="button" href="http://media.sixsq.com/how-can-iaas-providers-benefit-from-application-deployment-automation">Learn more &raquo;</a>
                 </center>
