Add novel pages

--- a/_includes/nuvla_intro.html
+++ b/_includes/nuvla_intro.html
@@ -4,9 +4,9 @@
   </div>-->
 </div>
 
-<div style="margin-top: 3px;" class="jumbotron top_product slipstream">
+<div style="margin-top: 3px;" class="jumbotron top_product nuvla">
   <div class="container">
-    <h1><img style="padding-bottom: 5px;" src="/img/design/slipstream_logo_white_on_transparent_256px.png" alt="slipstream logo" />
+    <h1><img style="max-width: 150px; padding-bottom: 23px;" src="/img/design/nuvla_logo_white_on_transparent_1000px.png" alt="nuvla logo" />
 	  {% if page.subtitle %}
 	    {{ page.subtitle }}
 	  {% else %}
