--- a/_layouts/article_slipstream_overview.html
+++ b/_layouts/article_slipstream_overview.html
@@ -88,7 +88,7 @@
                   <center><a class="btn btn-primary btn-lg" role="button" href="/contact/#contact-us-form">Get in touch &raquo;</a></center>
               </div>
           </div>
-          <div id="sme" class="row row-highlights">
+          <div id="newbies" class="row row-highlights">
               <div class="col-md-6 col-2-text">
                   <h2>Cloud Newbies</h2>
                   <p>If you are considering cloud but don't want to make that big, and possibly expensive, decision of signing up with one cloud provider, SlipStream can give you access to most of the mainstream IaaS providers without being stuck with vendor lock-in.</p>
@@ -102,7 +102,7 @@
                 </h1>
               </div>
           </div>
-          <div id="sme" class="row row-highlights">
+          <div id="msp" class="row row-highlights">
               <div class="col-md-6 col-2-image">
                 <h1>
                   <center>
@@ -112,13 +112,13 @@
               </div>
               <div class="col-md-6 col-2-text">
                 <h2>Managed Service Providers</h2>
-                <p>The Managed Services sector represents the largest growing component of the IT market. SlipStream helps MSPs differentiate themselves in this highly competitive environment by allowing them to take advantage of automation and provide a higher level of service without adding cost </p>
+                <p>The Managed Services sector represents the largest growing component of the IT market. SlipStream helps MSPs differentiate themselves in this highly competitive environment by allowing them to take advantage of automation and provide a higher level of service without adding cost.</p>
                 <center>
                   <a class="btn btn-primary btn-lg" role="button" href="http://media.sixsq.com/how-can-managed-service-providers-benefit-from-automation">Learn more &raquo;</a>
                 </center>
               </div>
           </div>
-          <div id="sme" class="row row-highlights">
+          <div id="var" class="row row-highlights">
               <div class="col-md-6 col-2-text">
                 <h2>Value Added Resellers</h2>
                 <p>The shift to cloud services, particularly to “Software as a Service offerings”, has  disrupted the Value-Added Reseller business model. In the cloud era, customers now expect access to their specialised applications without the hassle and cost of running the hardware. SlipStream helps VARs offer that service.</p>
@@ -134,7 +134,7 @@
                 </h1>
               </div>
           </div>
-          <div id="sme" class="row row-highlights">
+          <div id="iaas-provider" class="row row-highlights">
               <div class="col-md-6 col-2-image">
                 <h1>
                   <center>
@@ -144,7 +144,7 @@
               </div>
               <div class="col-md-6 col-2-text">
                 <h2>IaaS Providers</h2>
-                <p>The commoditisation of cloud resources has squeezed IaaS service providers forcing them to differentiate their services from their competitors or to live with ever reducing margins. They face increasing competition from cloud service offerings at all levels. SlipStream meets these challenges, providing advanced automation features and significant benefits simplifying the transition from a IaaS provider to a Managed Service Provider..</p>
+                <p>The commoditisation of cloud resources has squeezed IaaS service providers forcing them to differentiate their services from their competitors or to live with ever reducing margins. They face increasing competition from cloud service offerings at all levels. SlipStream meets these challenges, providing advanced automation features and significant benefits simplifying the transition from a IaaS provider to a Managed Service Provider.</p>
                 <center>
                   <a class="btn btn-primary btn-lg" role="button" href="http://media.sixsq.com/how-can-iaas-providers-benefit-from-application-deployment-automation">Learn more &raquo;</a>
                 </center>
@@ -163,8 +163,8 @@
                     </h1>
                 </div>
                 <div class="col-md-6 col-2-text">
-		            <h2>Sign up for the free SaaS</h2>
-		            <p>SlipStream can be used for free via the  SaaS. You only pay for the cloud services you consume. This is a good option if your organisation is happy with the idea of public cloud or doesn't have much demand for cloud services. Or if you just want to test it out. Signing up takes just a couple of minutes and the user interface is a pleasure. Go ahead, give it a try!</p>
+		            <h2>Sign up for the free on Nuvla, the SlipStream as a Service managed by SixSq</h2>
+		            <p>SlipStream can be used for free via Nuvla. You only pay for the cloud services you consume. This is a good option if your organisation is happy with the idea of public cloud. Or if you just want to test it out. Signing up takes just a couple of minutes and the user interface is a pleasure. Go ahead, give it a try!</p>
                 <center>
                   <a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/tryme">Try me &raquo;</a>
                 </center>
@@ -173,7 +173,7 @@
             <div class="row row-highlights">
                 <div class="col-md-6 col-2-text">
 			        <h2>Install it on premise</h2>
-			        <p>If you prefer to install SlipStream within your own walls, you can buy an on-premise license. The model can be tailor-made to suit your organisation. This option is best if you need access to support and maintenance, and  to proprietary connectors.</p>
+			        <p>If you prefer to install SlipStream within your own walls, you can buy an on-premise license. The model can be tailor-made to suit your organisation. This option is best if you need access to support and maintenance, and to proprietary connectors.</p>
               <center>
                 <a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/install">Install &raquo;</a>
               </center>
