--- a/_layouts/article_usecases.html
+++ b/_layouts/article_usecases.html
@@ -64,6 +64,11 @@
             {{ post.content }}
           </div>
         {% endif %}
+        <center>
+          <a href="/contact/#contact-us-form" class="btn btn-primary btn-lg">
+              Contact us &raquo;
+          </a>
+        </center>
       </div>
     </div>
     {% endif %}
