Adjust NB image max width

--- a/_layouts/article_nuvlabox_overview.html
+++ b/_layouts/article_nuvlabox_overview.html
@@ -12,7 +12,7 @@
         </div>
 
         <p align="center">
-          <img style="max-width: 700px" src="/img/content/nuvlabox/photos/nb_front.png" alt="NuvlaBox standalone" />
+          <img style="max-width: 80%" src="/img/content/nuvlabox/photos/nb_front.png" alt="NuvlaBox photo" />
         </p>
 
         <div class="container big spacy">
@@ -26,7 +26,7 @@
                   </h1>
               </div>
               <div class="col-md-6 col-2-text">
-                <h2>Privacy & Security</h2>
+                <h2>Privacy &amp; Security</h2>
                 <p>
 For most smaller organisations, the cost of a private cloud infrastructure is prohibitive. With the NuvlaBox, you get an affordable entry point into cloud computing. NuvlaBox includes complete Infrastructure as a Service (IaaS)  and Platform as a Service (PaaS) solutions. All communication is encrypted and deployments automated for higher security. This means that there is no compromise on cloud capabilities. Or security. And it's all yours.
                 </p>
