Add rhea group membership

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,6 +38,10 @@
               <br/>
               <a href="mailto:support@sixsq.com">support@sixsq.com</a>
             </div>
+            <br/>
+            <div>
+              SixSq is a member of the <a href="http://www.rheagroup.com">RHEA Group</a>.
+            </div>
           </div>
 
           <div class="follow_us col-md-4">
