Comment banner to avoid too much padding on mobile

--- a/_includes/nuvla_intro.html
+++ b/_includes/nuvla_intro.html
@@ -1,8 +1,8 @@
-<div class="banner">
-  <!--<div>
+<!--<div class="banner">
+  <div>
     <a href="/jobs/index.html">We're hiring!</a>
-  </div>-->
-</div>
+  </div>
+</div>-->
 
 <div style="margin-top: 3px;" class="jumbotron top_product nuvla">
   <div class="container">
