--- a/_includes/nuvlabox_intro.html
+++ b/_includes/nuvlabox_intro.html
@@ -1,5 +1,9 @@
-<div class="banner">
-</div>
+<!--<div class="banner">
+  <div>
+    <a href="/jobs/index.html">We're hiring!</a>
+  </div>
+</div>-->
+
 <div class="jumbotron top_product nuvlabox">
   <div class="container">
     <h1><img alt="SlipStream" style="padding-bottom: 20px;" src="/img/design/nuvlabox_logo_white_on_transparent_256px.png"></img>
