--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,8 +18,8 @@
   <link href="/css/navbar.css" rel="stylesheet" />
   <link href="/css/footer.css" rel="stylesheet" />
   <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-  <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-  <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+  <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]--
+  <script src="../../assets/js/ie-emulation-modes-warning.js"></script> -->
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
