Mention the contact us button

--- a/_layouts/oops_404.html
+++ b/_layouts/oops_404.html
@@ -12,7 +12,7 @@
           <br/>
           <h3>404 - File not found</h3>
           <br/>
-          <p>If you found this URL somewhere on the web, please let us know so that we can help fixing the source.</p>
+          <p>If you found this URL somewhere on the web, please let us know so that we can help fixing the source... just hit the 'Contact us' button below.</p>
           <p>Thanks!</p>
           <br/>
         </center>
