Open link in new tab

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,7 +40,7 @@
             </div>
             <br/>
             <div>
-              SixSq is a member of the <a href="http://www.rheagroup.com">RHEA Group</a>.
+              SixSq is a member of the <a href="http://www.rheagroup.com" target="_blank">RHEA Group</a>.
             </div>
             <br/>
           </div>
