--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,8 +30,9 @@
           </div>
 
           <div class="contact_us col-md-4">
-            <div>Need information? Give feedback?<br/>Get in touch.</div>
-            <div><a href="/contact/#contact-us-form">Fill form</a></div>
+            <div>Need information? Give feedback?<br/>
+              <a href="http://sixsq.com/contact/#contact-us-form">Get in touch.</a></div>
+      			<br/>
             <div>info/support: +41 22 54 41 733</div>
             <div>
               <a href="mailto:info@sixsq.com">info@sixsq.com</a>
