--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
 
           <div class="contact_us col-md-4">
             <div>Need information? Give feedback?<br/>
-              <a href="http://sixsq.com/contact/#contact-us-form">Get in touch.</a></div>
+              <a href="http://sixsq.com/contact/#contact-us-form">Get in touch</a>.</div>
       			<br/>
             <div>info/support: +41 22 54 41 733</div>
             <div>
