--- a/_includes/slipstream_intro.html
+++ b/_includes/slipstream_intro.html
@@ -17,7 +17,6 @@
       <p>{{ page.summary }}</p>
     {% else %}
       <p>Affordable, multi-cloud application management platform, built on open source professional software, for the enterprise, with love.</p>
-    {% endif %}
-<!--		<p>Sign Up for SlipStream Training Event!</p><a href="http://www.eventbrite.com/e/slipstream-training-hands-on-use-of-a-cloud-management-platform-tickets-16393996886?ref=ebtnebtckt" target="_blank"><img src="https://www.eventbrite.com/custombutton?eid=16393996886" alt="Eventbrite - SlipStream Training: hands on use of a cloud management platform" /></a> -->
+    {% endif %}<p>Sign Up for SlipStream Training Event! <a href="http://www.eventbrite.com/e/slipstream-training-hands-on-use-of-sixsqs-cloud-management-platform-tickets-17440176036?ref=ebtnebtckt" target="_blank"><img src="https://www.eventbrite.com/custombutton?eid=17440176036" alt="Eventbrite - SlipStream Training: hands on use of SixSq&#39;s cloud management platform" /></a></p>
   </div>
 </div>
