--- a/_layouts/article_nuvlabox_overview.html
+++ b/_layouts/article_nuvlabox_overview.html
@@ -102,6 +102,19 @@ For most smaller organisations, the cost of a private cloud infrastructure is pr
             </div>
             <div class="row row-highlights">
               <div class="col-md-6 col-2-text">
+                <h2>
+                  Designed in Switzerland, made in Europe
+                </h2>
+                <p>
+                  The hardware of the NuvlaBox appliance is the result of a fruitful collaboration between SixSq and <a href="http://www.exer-technologies.com/fr/nuvlabox-236.html">Exer Technologies</a> from France. Here is another example of SixSq, working closely with partners, taking in this case advantage of the experience of an expert in the field of hardware design, integration and products logistics.
+                </p>
+              </div>
+              <div class="col-md-6 col-2-image">
+                  <h1>
+                      <center>
+                          <span class="glyphicon glyphicon-thumbs-up"></span>
+                      </center>
+                  </h1>
               </div>
             </div>
           </div>
