Lou Updates to DevOps and PaaS pages

--- a/_includes/slipstream_nav.html
+++ b/_includes/slipstream_nav.html
@@ -13,7 +13,7 @@
         <li id="sub_overview"><a href="/products/slipstream">Overview</a></li>
         <li id="sub_paas"><a href="/products/slipstream/paas">PaaS</a></li>
         <li id="sub_devops"><a href="/products/slipstream/devops">DevOps</a></li>
-        <!--><li id="sub_hybrid"><a href="/products/slipstream/hybrid-cloud">Hybrid</a></li>-->
+        <!--<li id="sub_hybrid"><a href="/products/slipstream/hybrid-cloud">Hybrid</a></li>-->
         <li id="sub_usecases"><a href="/products/slipstream/usecases">Use Cases</a></li>
         <li id="sub_connectors"><a href="/products/slipstream/cloud-connectors">All Clouds</a></li>
         <li id="sub_docs"><a href="/products/slipstream/documentation">Doc &amp; API</a></li>
